--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react-scripts": "2.1.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.83.0",
-    "cuid": "^2.1.4"
+    "cuid": "^2.1.4",
+    "react-router-dom": "^4.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
