--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "cuid": "^2.1.4",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
-    "react-redux": "^5.1.1"
+    "react-redux": "^5.1.1",
+    "redux-form": "^8.0.4",
+    "revalidate": "^1.2.0",
+    "react-datepicker": "^2.0.0",
+    "moment": "^2.23.0"
   },
   "scripts": {
     "start": "react-scripts start",
