--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "redux-form": "^8.0.4",
     "revalidate": "^1.2.0",
     "react-datepicker": "^2.0.0",
-    "moment": "^2.23.0"
+    "moment": "^2.23.0",
+    "react-places-autocomplete": "^6.1.3",
+    "react-load-script": "^0.0.6",
+    "google-map-react": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
